tests/negative/neg_pr1113a_constructor_type_mismatch.safe
package neg_pr1113a_constructor_type_mismatch

   type shape is circle (radius : integer) or idle

   current : shape = circle ("bad")
